# Pinefruit

./: .gitignore  Cargo.toml  build.rs  cargo-timing-20220214T231956Z.html  cargo-timing-20220214T232109Z.html  clean_all  noisevis.py  notes  readme.md
_stuff/: model_old.rs  stuff
eeks/: Cargo.toml  readme.md
eeks/ekstensions-derive/: Cargo.toml
eeks/ekstensions-derive/src/: lib.rs
eeks/extensions/: example1.lua
eeks/extensions/example0/: Cargo.toml
eeks/extensions/example0/src/: lib.rs
eeks/src/: lib.rs  main.rs
eks/: Cargo.toml  readme.md
eks/component-derive/: Cargo.toml
eks/component-derive/src/: lib.rs
eks/eks-derive/: Cargo.toml
eks/eks-derive/src/: lib.rs
eks/src/: containers.rs  entity.rs  lib.rs  luastorages.rs  query.rs  query_manual.rs  resource.rs  snapshot.rs  sparseset.rs  system.rs
ekstensions/: Cargo.toml  readme.md
ekstensions/eks/: Cargo.toml  readme.md
ekstensions/eks/src/: entity.rs  lib.rs  resource.rs  sparseset.rs
ekstensions/ekstensions-derive/: Cargo.toml
ekstensions/ekstensions-derive/src/: lib.rs
ekstensions/src/: lib.rs  main.rs
extensions/: base_blocks.lua
extensions/chunks/: Cargo.toml
extensions/chunks/src/: array_volume.rs  blocks.rs  chunk.rs  chunks.rs  fvt.rs  generation.rs  lib.rs  voxelvolume.rs
extensions/controls/: Cargo.toml
extensions/controls/src/: lib.rs
extensions/example0/: Cargo.toml
extensions/example0/src/: lib.rs
extensions/light/: Cargo.toml
extensions/light/src/: lib.rs  light.rs  sun.rs
extensions/meshing/: Cargo.toml
extensions/meshing/src/: lib.rs  model.rs
extensions/pinecore/: Cargo.toml
extensions/pinecore/src/: controls.rs  lib.rs  player.rs  render.rs  time.rs  transform.rs
extensions/player/: Cargo.toml
extensions/player/src/: lib.rs
extensions/render/: Cargo.toml
extensions/render/src/: lib.rs
extensions/render2/: Cargo.toml
extensions/render2/src/: lib.rs
extensions/terrain/: Cargo.toml
extensions/terrain/src/: generator.rs  lib.rs  liquids.rs  modification.rs  script.rs  terrain.rs
extensions/time/: Cargo.toml
extensions/time/src/: lib.rs
extensions/transform/: Cargo.toml
extensions/transform/src/: lib.rs
extensions/world/: Cargo.toml
extensions/world/src/: lib.rs  liquids.rs  map.rs  mod.rs
krender/: Cargo.toml  readme.md
krender/src/: allocator.rs  bindgroup.rs  blit.rs  blit.wgsl  buffer.rs  bundle.rs  camera.rs  input.rs  input_immediate.rs  input_v2.rs  lib.rs  material.rs  mesh.rs  rendercontext.rs  rendertarget.rs  shader.rs  texture.rs  util.rs  vertex.rs
krender/tests/: display.rs  sanity.rs
krender/tests/attributes/: position.ron
krender/tests/resources/: colour.frag  fullquad.vert  material.ron  shader.ron
oktree/: Cargo.toml
oktree/src/: lib.rs  simple.rs
oktree/tests/: tests.rs
resources/: angle_brightness_spline.ron  density_spline.ron  difference_spline.ron  kblocks.ron  testing.lua  time_angle_spline.ron
resources/generator_default/: example.generator.ron  height.spline.ron  variance.noise.ron  variance.spline.ron
resources/graphs/: default.ron  example.ron  oit.ron
resources/materials/: box_material.ron  chunk_bounds.ron  dirt.ron  grass.ron  grass_top.ron  kmaterials.ron  octree_chunks.ron  skybox.ron  ssao_apply.ron  ssao_generate.ron  stone.ron  sunbox.ron  uv.ron
resources/shaders/: a.spv  accelerated_octree.comp  acceleration_test.comp  acceleration_test.ron  albedo.frag  albedo.frag.spv  albedo.ron  albedo.vert  albedo.vert.spv  blit.ron  blur.frag  blur.frag.spv  blur.ron  camera_position.vert  camera_position_tc.vert  chunk_bounds.ron  common.glsl  depth.ron  depth.vert  depth.vert.spv  fullquad.vert  fullquad.vert.spv  object_albedo.ron  octree.comp  octree_chunks.frag  octree_chunks.ron  oit_accum.ron  ray_test.comp  ray_test.comp.spv  ray_test.ron  red.frag  skybox.ron  skybox.wgsl  ssao_apply.frag  ssao_apply.frag.spv  ssao_apply.ron  ssao_generate.frag  ssao_generate.frag.spv  ssao_generate.ron  testing_vertex.ron  (+6 more)
resources/shaders/lit_material/: lit_material.frag  lit_material.ron  lit_material.vert
resources/shaders/octree_chunks/: octree_chunks.frag  octree_chunks.ron
resources/shaders/old/: array_texture_shader.wgsl  colour_mesh.frag  colour_mesh.frag.spv  colour_mesh.ron  colour_mesh.vert  colour_mesh.vert.spv  copy_or_something.ron  oit_accum.frag  oit_resolve.frag  opaque.frag  opaque.frag.spv  opaque.ron  opaque.vert  opaque.vert.spv  tarray.ron  texture_array_shader.wgsl
resources/shaders/skybox/: skybox.ron  sunbox.ron  sunbox.wgsl
resources/shaders/ssao/: ssao_apply.frag  ssao_apply.ron  ssao_generate.ron
resources/textures/skybox/: skybox.ron  sunbox.ron
src/: camera.rs  client.rs  comptest.rs  game.rs  geometry.rs  gpu.rs  gui.rs  indexmap.rs  input.rs  light.wgsl  lua.rs  main.rs  material.rs  mesh.rs  model.rs  noise.rs  octree.rs  raster.rs  rays.rs  raytrace.rs  render.rs  rendering_integration.rs  resource_manager.rs  server.rs  shader.wgsl  simulation.rs  texture.rs  texturemanagers.rs  util.rs  voxelvolume.rs  window.rs  windowecs.rs  world.rs
src/ecs/: control.rs  gpu.rs  input.rs  map.rs  marker.rs  misc.rs  mod.rs  movement.rs  physics.rs  render.rs  time.rs  tracershot.rs  winput.rs
src/ecs/map/: chunks.rs  light.rs  (+8 more)
src/geometry/: loader.rs  material.rs  mesh.rs  mod.rs  texture.rs  vertex.rs
src/gui/: console.rs  mod.rs  profiling.rs  viewport.rs
src/model/: loader.rs  material.rs  mesh.rs  mod.rs  model.rs  texture.rs
src/render/: blit.rs  blit.wgsl  boundmaterial.rs  boundmesh.rs  boundtexture.rs  camera.rs  drawable.rs  geometry.rs  graph.rs  instance.rs  interpolation.rs  light.rs  material.rs  mesh.rs  mod.rs  model.rs  modelgroup.rs  rays.rs  renderer.rs  rendergroup.rs  renderinstance.rs  resources.rs  rg.rs  shader.rs  shader.wgsl  ssao.rs  texture.rs  uniforms.rs  vertex.rs
src/shaders/: chunk_shader.wgsl  texture_array_shader.wgsl
src/voxel/: array_volume.rs  blocks.rs  chunk.rs  mod.rs  terrain.rs  voxelvolume.rs
src/world/: acceleration.rs  blocks.rs  chunk.rs  map.rs  mod.rs  terrain.rs  voxelvolume.rs
(+1 files in other folders)
