# cargo-features = ["codegen-backend"] # Cranelift back-end

[package]
name = "kkraft"
version = "0.1.0"
authors = ["Saskapult <“kieransmith@gmail.com”>"]
edition = "2021"
resolver = "2"

#
# [build]
# rustflags = ["-Z", "threads=8"] # Parallel front-end

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
# codegen-backend = "cranelift" # Cranelift back-end
debug = 1

# Rust analyzer does not like it when I remove this
[workspace]
members = [
	"krender", 
	"oktree",
	"eks",
]

[dependencies]
krender = { path = "./krender" }
oktree = { path = "./oktree" }
eks = { path = "./eks" }

env_logger = "0.10.0"
log = "0.4"

image = "0.24"
pollster = "0.2"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0.30"
tobj = "3.0"
dashmap = "4.0.2"
rand = "0.8.4"
rand_xoshiro = "0.6.0"
noise = "0.8.2"
poisson = "0.10.1"
serde = "1.0.132"
bincode = "1.3.3"
ron = "0.7.0"

winit = "0.28.0"
epi = "0.17.0"
egui = "0.22.0"
egui-winit = "0.22.0"
egui-wgpu = { version = "0.22.0" }
egui_extras = "0.22.0"
wgpu = "0.16.0"
wgpu-profiler = "0.12.1"

splines = { version = "4.0.3", features = ["serde"] }
rayon = "1.5.1"
lz4_flex = "0.9.3"
enumflags2 = "0.7.5"
crossbeam-channel = "0.5.6"
slotmap = "1.0.6"
hashbrown = "0.13.1"
parking_lot = "0.12.1"
arrayvec = "0.7.2"
glam = { version = "0.24.0", features = ["bytemuck", "rand"] }
emath = "0.22.0"
atomic_refcell = "0.1.10"
profiling = { version = "1.0.10", features = ["profile-with-puffin"] }
puffin_egui = "0.22.0"
simdnoise = "3.1.6"
rustc-hash = "1.1.0"
smallvec = "1.11.2"
variantly = "0.4.0"

