# cargo-features = ["codegen-backend"] # Cranelift back-end

[package]
name = "pinefruit"
version = "0.1.0"
authors = ["Saskapult <“thekieransmith@gmail.com”>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 2

[profile.dev]
# Cranelift breaks simd_noise :( 
# codegen-backend = "cranelift" # Cranelift back-end
debug = 1

# Optimizations for performance critical extensions 
[profile.dev.package.krender]
opt-level = 2
[profile.dev.package.chunks]
opt-level = 2
[profile.dev.package.terrain]
opt-level = 2
[profile.dev.package.meshing]
opt-level = 2

[workspace]
members = [
	"krender", 
	"eks",
	"eeks",
	"extensions/pinecore",
]

[dependencies]
krender = { path = "krender" }
eeks = { path = "eeks" }
pinecore = { path = "extensions/pinecore" }
# Dependencies that appear in the extensions directory are marked as core
# extensions and built as part of the base binary
# The extensions listed above are required for the project to function.
# The extensions listed below could be built and loaded dynamically.
# I simply want to not compile them separately (it takes a lot of time).
# Be aware that the "[workspace]" must be remove from the crates' manifest
chunks = { path = "extensions/chunks"}
light = { path = "extensions/light"}
meshing = { path = "extensions/meshing"}
terrain = { path = "extensions/terrain"}

env_logger = "0.11.3"
log = "0.4"

image = "0.25.1"
pollster = "0.3.0"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0.30"
tobj = "4.0.2"
dashmap = "5.5.3"
rand = "0.8.4"
rand_xoshiro = "0.6.0"
noise = "0.9.0"
poisson = "0.10.1"
serde = "1.0.132"
bincode = "1.3.3"
ron = "0.8.0"

winit = "0.29.15"
egui = "0.27.2"
egui-winit = "0.27.2"
egui-wgpu = "0.27.2"
wgpu = "0.19.4"
wgpu-profiler = "0.16.2"

splines = { version = "4.0.3", features = ["serde"] }
rayon = "1.5.1"
lz4_flex = "0.11.3"
enumflags2 = "0.7.5"
crossbeam-channel = "0.5.6"
slotmap = "1.0.6"
hashbrown = "0.14.3"
parking_lot = "0.12.1"
arrayvec = "0.7.2"
glam = { version = "0.27.0", features = ["bytemuck", "rand"] }
atomic_refcell = "0.1.10"

profiling = { version = "1.0.10", features = ["profile-with-puffin"] }
puffin_egui = "0.27.1"
puffin_http = "0.16.0"

simdnoise = "3.1.6"
rustc-hash = "1.1.0"
smallvec = "1.11.2"
variantly = "0.4.0"
