[package]
name = "eeks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
env_logger = "0.11.3"
libloading = "0.8.3"
log = "0.4.21"
toml = "0.8.12"
walkdir = "2.5.0"
eks = { path = "../eks" }
profiling = { version = "1.0.10" }
ekstensions-derive = { path = "ekstensions-derive" }
mlua = { version = "0.9.9", features = ["luau-jit", "macros", "send"] }
