[package]
name = "eks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_refcell = "0.1.10"
component-derive = { version = "0.1.0", path = "component-derive" }
log = "0.4.20"
parking_lot = "0.12.1"
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.47"
