[package]
name = "eks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
atomic_refcell = "0.1.10"
bincode = "1.3.3"
component-derive = { version = "0.1.0", path = "eks-derive" }
log = "0.4.20"
mlua = { version = "0.9.9", features = ["luau-jit", "macros", "send"] }
parking_lot = "0.12.1"
ron = "0.8.1"
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.47"
