[package]
name = "chunks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
eeks = { path = "../../eeks" }
pinecore = { path = "../pinecore" }
log = "0.4.21"
env_logger = "0.11.3"
glam = "0.27.0"
slotmap = "1.0.7"
parking_lot = "0.12.2"
serde = "1.0.201"
krender = { path = "../../krender" }
anyhow = "1.0.83"
ron = "0.8.1"

# [workspace]
