[package]
name = "light"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
ekstensions = { path = "../../ekstensions" }
log = "0.4.21"
env_logger = "0.11.3"
chunks = { path = "../chunks" }
terrain = { path = "../terrain" }
transform = { path = "../transform" }
controls = { path = "../controls" }
player = { path = "../player" }
slotmap = "1.0.7"
glam = "0.27.0"
parking_lot = "0.12.2"
