[package]
name = "meshing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
eeks = { path = "../../eeks" }
pinecore = { path = "../pinecore" }
log = "0.4.21"
env_logger = "0.11.3"
# render2 = { path = "../render2" }
krender = { path = "../../krender" }
smallvec = "1.13.2"
glam = "0.27.0"
arrayvec = "0.7.4"
slotmap = "1.0.7"
crossbeam-channel = "0.5.12"
chunks = { path = "../chunks" }
light = { path = "../light" }
terrain = { path = "../terrain" }
rayon = "1.10.0"
thiserror = "1.0.60"
parking_lot = "0.12.2"

# [workspace]
