[package]
name = "player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[build]
rustc-wrapper = "/usr/bin/sccache"

[dependencies]
ekstensions = { path = "../../ekstensions" }
log = "0.4.21"
transform = { path = "../transform", features = ["no_export"] }
controls = { path = "../controls", features = ["no_export"] }

[features]
no_export = []
