[package]
name = "render2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bytemuck = "1.15.0"
eeks = { path = "../../eeks" }
glam = { version = "0.27.0", features = ["bytemuck"] }
rand = "0.8.5"
transform = { path = "../transform" }
wgpu = "0.19.0"
krender = { path = "../../krender" }
log = "0.4.21"
render = { path = "../render" }
env_logger = "0.11.3"

[workspace]
