[package]
name = "transform"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[build]
rustc-wrapper = "/usr/bin/sccache"

[dependencies]
ekstensions = { path = "../../ekstensions" }
controls = { path = "../controls", features = ["no_export"] }
glam = { version = "0.27.0", features = ["serde"] }
serde = "1.0.200"

[features]
no_export = []
