[package]
name = "transform"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
ekstensions = { path = "../../ekstensions" }
controls = { path = "../controls" }
glam = { version = "0.27.0", features = ["serde"] }
serde = "1.0.200"
log = "0.4.21"
env_logger = "0.11.3"

[features]
extension = []
